# Demo-printer-project-FOIP-1

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  c-cpp.yml  ci.yml
Test/: CMakeLists.txt  test_foip_integration.cpp  test_main.cpp  test_pjsip_stub.cpp  test_spandsp_stub.cpp
demo_folder/: example.txt
include/: logger.h  pjsip_stub.h  spandsp_stub.h
include/abstract/: FaxManager.h  FaxTypes.h  IFaxProtocol.h  IFaxSession.h  IFaxTransport.h
include/protocol/: T30Protocol.h
include/transport/: SipTransport.h
include/utils/: Logger.h
src/: logger.cpp  main.cpp  pjsip_stub.cpp  spandsp_stub.cpp
src/abstract/: FaxManager.cpp
src/protocol/: T30Protocol.cpp
src/transport/: SipTransport.cpp
src/utils/: Logger.cpp
tests/: test_integration.cpp  test_logger.cpp
